# whisper_transcribe_rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config_am1430.toml  config_am1430_file.toml  config_knx.toml  config_mic.toml  config_rthk1.toml  config_rthk2.toml  config_rthk3.toml  log4rs.yaml  transcript.jsonl
.github/workflows/: rust.yml
bak/: AudioRecorder.tsx  get_sliero.rs  log_builder.rs
configs/: config_am1430.toml  config_am1430_file.toml  config_knx.toml  config_mic.toml  config_output.toml  config_rthk1.toml  config_rthk2.toml  config_rthk3.toml  config_web.toml
examples/: key_ring.rs  looping.rs  play_audio.rs  set_pg_key_ring_password.rs  test.rs
frontend/: .gitignore  package-lock.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  AudioRecorder.tsx  AudioStreamComponent.tsx  ChatComponent.tsx  audioProcessor.js
src/: config.rs  download_utils.rs  key_ring_utils.rs  lib.rs  log4rs.yaml  main.rs  mic_input.rs  record_audio.rs  record_output.rs  runtime_utils.rs  sample.rs  silero.rs  streaming.rs  utils.rs  vad.rs  vad_processor.rs  web.rs
src/examples/: chunk_size.rs  vad_native.rs  vad_streaming_file.rs  vad_streaming_transcribe.rs
