[package]
name = "whisper-rs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
log4rs = { version = "1.3.0", features = ["console_appender"] }
serde_json = "1.0.128"
voice_activity_detector = { version = "0.1.1", features = ["async"]}
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", version = "0.13.0", features = ["metal","whisper-cpp-log"] }
tokio-stream = "0.1.16"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
byteorder = "1.5.0"
