[package]
name = "whisper_transcribe_rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
hound = "3.5.1"
log4rs = { version = "1.3.0", features = ["console_appender"] }
serde_json = "1.0.128"
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.6"}
tokio-stream = "0.1.16"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
byteorder = "1.5.0"
rand = "0.8.5"
# `bundled` causes us to automatically compile and link in an up to date
# version of SQLite for you. This avoids many common build issues, and
# avoids depending on the version of SQLite on the users system (or your
# system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
#
# That said, it's not ideal for all scenarios and in particular, generic
# libraries built around `rusqlite` should probably not enable it, which
# is why it is not a default feature -- it could become hard to disable.
#rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = "1.0.210"
toml = "0.8.19"
zhconv = "0.3.1"
dirs = "5.0.1"
reqwest = {version="0.12.8", features = ["blocking"]}
tempfile = "3.13.0"
url = "2.5.2"
clap = {version="4.5.20",features = ["derive"]}
serde_yaml = "0.9.34"
ringbuffer = "0.15.0"
sha1 = "0.10.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "postgres", "chrono","tls-native-tls"] }
chrono = "0.4.38"
crossbeam = "0.8.4"
fs2 = "0.4.3"
cpal = "0.15.3"
dasp_sample = "0.11.0"
samplerate = "0.2.4"
console = "0.15.8"
read_chunks = "0.2.0"
#coreaudio-rs = "0.12.1"
#keyring = { version = "3", features = ["apple-native", "windows-native"] }

[dependencies.whisper-rs]
git = "https://github.com/tazz4843/whisper-rs"
version = "0.13.0"
default-features = false
# all cross platform features
features = [
  "whisper-cpp-log"
]

[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
git = "https://github.com/tazz4843/whisper-rs"
version = "0.13.0"
default-features = false
features = ["metal"]
